--- a/sistema/templates/sistema/index.html
+++ b/sistema/templates/sistema/index.html
@@ -89,7 +89,7 @@
             text-shadow: 0 0 5px rgba(255,255,255,0.1);
         }
 
-        /* ---- Botón ---- */
+        /* ---- Boton ---- */
         .button-container {
             text-align: center;
             margin-bottom: 50px;
